screenshot and package align fix

--- a/src/mainViews/mainProduct/views/screenshot/style.module.scss
+++ b/src/mainViews/mainProduct/views/screenshot/style.module.scss
@@ -3,6 +3,7 @@
 
 .screenshotWrapper {
   padding: 2.5rem 1rem;
+  padding-top: 0;
   text-align: center;
   border-radius: 0.5rem;
   .screenshotTitle {
